--- a/WebContent/css/glob.css
+++ b/WebContent/css/glob.css
@@ -2,10 +2,7 @@
 body{
 	font-family:arial;
 	background-color:#c6ebff;
-	margin-left:15%; 
-	margin-right:15%;
-	margin-top:5%;
-	margin-bottom:5%;
+	margin:5% 15% 5% 15%;
 }
 
 nav{
@@ -41,6 +38,7 @@ div.main{
 	background-color:#ffffff;
 	border-radius:20px;
 	padding:3%;
+	min-width:380px; /*problema del taglio della finestra*/
 }
 hr.line{
     display: block;
