--- a/WebContent/css/structIniz.css
+++ b/WebContent/css/structIniz.css
@@ -1,29 +1,24 @@
-div.tiles{
+div.tile{
 	text-align:center;
 	display:inline-block;
-	margin:1%;
-	padding:2%;
-}
-
-div.tiles img{
-	position:relative;
 	margin:6%;
-	box-shadow: 10px 10px 5px #888888
+	padding:0%;
 }
 
-div.tiles img:hover{
-	-webkit-transform: scale(1.2);
-  	-moz-transform: scale(1.2);
-  	-o-transform: scale(1.2);
-	transform: scale(1.2);
+div.tile img{
+	box-shadow: 10px 10px 5px #888888;
+}
+
+span.textonimg{
+	text-align:center;
+	color:#abb1ab;
+	margin:0%;
+}
+ div.tile:hover{
+	-webkit-transform: scale(1.3);
+  	-moz-transform: scale(1.3);
+  	-o-transform: scale(1.3);
+	transform: scale(1.3);
 	transition: all 0.3s;
 	-webkit-transition: all 0.3s;
-}
-
-div.textonimg{
-	font-size:50px;
-	opacity:1;
-	position:relative;
-	color:#eaeaea;
-	
 }
