--- a/WebContent/css/glob.css
+++ b/WebContent/css/glob.css
@@ -1,14 +1,59 @@
-
+@import url(https://fonts.googleapis.com/css?family=Montserrat:700);
 body{
-	font-family:arial;
 	background-color:#c6ebff;
 	margin-left:15%; 
 	margin-right:15%;
 	margin-top:5%;
 	margin-bottom:5%;
+	margin:0px;
+    padding:0px;
+    font-family: 'Montserrat', sans-serif;
+
+}
+/*NavBar*/
+nav
+{
+ height:100px;
+ background-color:#ffa500;
+ border-radius:20px;
+}
+nav ul
+{
+ list-style-type:none;
+ width:100%;
+}
+nav ul li
+{
+  display:inline;
+  margin:3%;
 }
 
-nav{
+nav ul li a
+{
+  text-decoration:none;
+  padding:1.5%;
+  color:white;
+  line-height:100px;
+  font-size:25px;
+  
+  
+}
+nav ul li h1
+{
+  display:inline;
+  color:white;
+  margin-right:20px;
+  font-size:35px;
+}
+
+nav ul li a:hover
+{
+  background-color:#FFFFFF;
+  color:#ffa500;
+  transition:all 0.50s;
+  border-radius:20px;
+}
+/*nav{
 	text-align:center;
 	border-radius:20px;
 	margin-bottom:5%;
@@ -68,7 +113,7 @@ div.imgcontent img{
 	height:80%;
 	width:80%;
 }
-
+*/
 
 /*Footer*/
 
