--- a/WebContent/css/structIniz.css
+++ b/WebContent/css/structIniz.css
@@ -7,7 +7,10 @@ div.tile{
 
 div.tile img{
 	box-shadow: 10px 10px 5px #888888;
+	height:80%;
+	width:80%
 }
+
 
 span.textonimg{
 	text-align:center;
@@ -20,5 +23,5 @@ span.textonimg{
   	-o-transform: scale(1.3);
 	transform: scale(1.3);
 	transition: all 0.3s;
-	-webkit-transition: all 0.3s;
+	-webkit-transition: all 0.4s;
 }
