--- a/WebContent/css/glob.css
+++ b/WebContent/css/glob.css
@@ -53,19 +53,44 @@ div.main{
 
 .wrapper
 {
+ text-align:center;
  border-radius:20px;
  background-color:#FFA500;
  max-width:100%;
  color:white;
- }
- footer ul 
- {
-	 list-style-type:none; 
- }
- footer ul li 
- {
-	text-align:center;	
-  }
+}
+ 
+footer ul
+{
+ list-style-type:none;
+ display:inline;
+}
+
+footer ul.first li.second
+{
+ display:inline-table;
+ margin:3% 7% 3% 7%;
+}
+
+footer ul li.third
+{
+ display:block;
+ margin:5% 0% 5% 0%;
+}
+
+footer ul li.third a.util
+{
+  text-decoration:none;
+  padding:3px;
+}
+
+footer ul li.third a.util:hover
+{
+  background-color:#FFFFFF;
+  color:#ffa500;
+  transition:all 0.50s;
+  border-radius:20px;
+}
 
 .footerIco
 {
@@ -76,24 +101,8 @@ div.main{
   -moz-transition:opacity 1s;
   -o-transition:opacity 1s;
 }
-.footerIco:hover{
+
+.footerIco:hover
+{
   opacity:1;	
 }
-.leftSide
-{
- text-align:left;	
-}
-.blockToInline
-{
- display: inline;
-}
-.aLineOfSpacingBoth
-{
- margin-top:30px;
-
-}
-.aLineOfSpacingBot
-{
-margin-bottom:12px;
-}
-
