aggiorno colori nav e sfondo al body

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
 footer{
   text-align:center;
   border-radius:20px;
-  background-color:#FFA500;
+  background-color: rgba(128, 128, 128, 0.62);
   color:white;
 }
 
