--- a/css/footer.css
+++ b/css/footer.css
@@ -55,3 +55,9 @@ a.util:hover{
   transition:all 0.50s;
   border-radius:20px;
 }
+h5{
+  font-size: 15px;
+  text-align: center;
+  position: relative;
+  top: -5px;
+}
