--- a/css/glob.css
+++ b/css/glob.css
@@ -1,14 +1,14 @@
 /*NavBar*/
 body{
 	font-family:arial;
-	background-image: url("../images/la.jpg");
+	background-color:#c6ebff;
 	min-width:480px;
+  background: url("../images/la.jpg");
 }
 nav
 {
-    background-color: rgba(128, 128, 128, 0.79);
- border-radius:10px;
- height: 120px;
+ background-color: rgba(128, 128, 128, 0.79);
+ border-radius:20px;
 }
 nav ul
 {
@@ -48,7 +48,7 @@ nav ul li a:hover
 }
 
 div.main{
-	background-color:#ffffff;
+	background-color:rgba(255, 255, 255, 0.4);
 	border-radius:20px;
 	padding:3%;
 	margin:3% 15% 5% 15%;
@@ -64,10 +64,9 @@ div.main{
 .menu-icon
 {
   display: inline-block;
-  background-color: white;
   font-size:30px;
   border-radius:5px;
-  color:#ffa500;
+  color:rgba(22, 22, 23, 0.81);
 }
 
 .icon-bar
