--- a/css/glob.css
+++ b/css/glob.css
@@ -4,6 +4,8 @@ body{
 	background-color:#c6ebff;
 	min-width:480px;
   background: url("../images/la.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 nav
 {
@@ -26,6 +28,7 @@ nav ul li a
   color:white;
   font-size:25px;
   padding:10%;
+  padding: 15px 15px;
 }
 
 nav ul li  h1
@@ -45,6 +48,8 @@ nav ul li a:hover
   -moz-transition:all 0.50s;
   -ms-transition:all 0.50s;
   border-radius:20px;
+  text-decoration:none;
+  padding: 15px 15px;
 }
 
 div.main{
