cambio colore scritte tile

--- a/css/structIniz.css
+++ b/css/structIniz.css
@@ -13,7 +13,8 @@ div.tile img{
 
 span.textonimg{
 	text-align:center;
-	color:#abb1ab;
+	color:#ffffff;
+	text-shadow:;
 	margin:0%;
 }
  div.tile:hover{
